Fix spacing of skill bullet points on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,11 @@ img.slide {
   text-align: left;
 }
 
+.skill {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .skills-heading {
   display: block;
   font-weight: bold;
@@ -309,7 +314,8 @@ img.slide {
 
 .fa-circle {
   font-size: 10px;
-}
+  margin-right: 1vmin;
+} 
 
 /* Media Queries */
 @media screen and (max-width: 992px) {
